# src/routes/user.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 import {getAllUsers,getUserById, deleteUser, updateUser, createNewUser} from '../controllers/users'
+import {validateUser,validate} from '../validation/validationRules'
 
 
 const router: any = express.Router();
@@ -7,8 +8,8 @@ const router: any = express.Router();
 router.get('/', getAllUsers)
 router.get('/:id', getUserById)
 router.delete('/:id', deleteUser)
-router.post('/', createNewUser)
-router.put('/:id', updateUser)
+router.post('/', validateUser(),validate, createNewUser)
+router.put('/:id',validateUser(),validate, updateUser)
 
 
 export default router;
